--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 5163cb3cd
+	base = 306f1d7c7
 	trim = marti_visualization_msgs
-	trimbase = 
+	trimbase = 5163cb3cd
