--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 4b206b7a5
+	base = f1cdbcbd2
 	trim = marti_common_msgs
-	trimbase = 
+	trimbase = 4b206b7a5
