--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 3fd6873d3
+	base = f1ef8219a
 	trim = marti_sensor_msgs
-	trimbase = 
+	trimbase = 3fd6873d3
