--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = a32ed8c1c
+	base = a5afbb749
 	trim = marti_perception_msgs
-	trimbase = 
+	trimbase = a32ed8c1c
