--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 190fd6c9a
+	base = 17885ffb3
 	trim = marti_can_msgs
-	trimbase = 
+	trimbase = 190fd6c9a
