--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = a612a6cdf
+	base = a4d312872
 	trim = marti_status_msgs
-	trimbase = 
+	trimbase = a612a6cdf
