--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = a6cb5bd7e
+	base = 110d1184a
 	trim = marti_nav_msgs
-	trimbase = 
+	trimbase = a6cb5bd7e
