--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = f1cc012b4
+	base = f90e8526d
 	trim = marti_introspection_msgs
-	trimbase = 
+	trimbase = f1cc012b4
