--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 18bc43523
+	base = 9fca883b5
 	trim = marti_dbw_msgs
-	trimbase = 
+	trimbase = 18bc43523
