--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.6.0-1": ["Fri Aug 09 2024", "Southwest Research Institute", "swri-robotics@swri.org"], "1.5.2-2": ["Wed Mar 06 2024", "Southwest Research Institute", "swri-robotics@swri.org"]}
+{"1.6.1-1": ["Thu Sep 05 2024", "Southwest Research Institute", "swri-robotics@swri.org"], "1.6.0-1": ["Fri Aug 09 2024", "Southwest Research Institute", "swri-robotics@swri.org"], "1.5.2-2": ["Wed Mar 06 2024", "Southwest Research Institute", "swri-robotics@swri.org"]}
