--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = d85d49c3e
+	base = d58be137e
 	trim = marti_visualization_msgs
-	trimbase = 
+	trimbase = d85d49c3e
