--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 10af68956
+	base = f3aa1bc57
 	trim = marti_sensor_msgs
-	trimbase = 
+	trimbase = 10af68956
