--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 773cfe1ad
+	base = d427ac464
 	trim = marti_perception_msgs
-	trimbase = 
+	trimbase = 773cfe1ad
