--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = e190b6469
+	base = 35806f3d2
 	trim = marti_can_msgs
-	trimbase = 
+	trimbase = e190b6469
