--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = a7b81024d
+	base = dc79a7c6f
 	trim = marti_status_msgs
-	trimbase = 
+	trimbase = a7b81024d
