--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 940c21e0f
+	base = c0b642519
 	trim = marti_nav_msgs
-	trimbase = 
+	trimbase = 940c21e0f
