--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = f69fd41d0
+	base = cd95aa65d
 	trim = marti_introspection_msgs
-	trimbase = 
+	trimbase = f69fd41d0
