--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205c
-	base = 299e12f86
+	base = 395b8d970
 	trim = marti_dbw_msgs
-	trimbase = 
+	trimbase = 299e12f86
