--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = c52090d837a8
+	base = 454ef884b4d5
 	trim = marti_visualization_msgs
-	trimbase = 
+	trimbase = c52090d837a8
