--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = 555e9cf2a648
+	base = 30c0dcc1a76d
 	trim = marti_status_msgs
-	trimbase = 
+	trimbase = 555e9cf2a648
