--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = a071b392bce8
+	base = 35c9af0574b0
 	trim = marti_sensor_msgs
-	trimbase = 
+	trimbase = a071b392bce8
