--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = 908f84f6e73f
+	base = 7bd8c9e0ccd1
 	trim = marti_perception_msgs
-	trimbase = 
+	trimbase = 908f84f6e73f
