--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = e57c9b0c05d8
+	base = 64a8833c0164
 	trim = marti_nav_msgs
-	trimbase = 
+	trimbase = e57c9b0c05d8
