--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = 61ba29012192
+	base = 4a017073bf10
 	trim = marti_introspection_msgs
-	trimbase = 
+	trimbase = 61ba29012192
