--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = 28885380348b
+	base = c8f3ef3ed064
 	trim = marti_dbw_msgs
-	trimbase = 
+	trimbase = 28885380348b
