--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = d09957fb36a4
+	base = 543f588e7b6c
 	trim = marti_common_msgs
-	trimbase = 
+	trimbase = d09957fb36a4
