--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1c549205ca33
-	base = cd8b841b3c51
+	base = 16e69296f596
 	trim = marti_can_msgs
-	trimbase = 
+	trimbase = cd8b841b3c51
